CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(zhockon)

#SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -w")

FIND_PACKAGE(SDL)
FIND_PACKAGE(OpenAL)
FIND_PACKAGE(PythonLibs)
SET(ALUT "alut")
SET(GLUT "glut")

INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/core)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/samples/helloworld)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/samples/pyramid)

SET(LIBRARY_OUTPUT_PATH library)
